# 2d-vtvl-sim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: animate_descent.py  attitude_loop.py  check_attitude.py  check_cascade.py  check_sim.py
results/: check_cascade.csv
src/: controllers.py  params.py  paths.py  plotting.py  run_scenarios.py
src/vtvl_sim/: __init__.py  controllers.py  params.py  paths.py  plotting.py  post_processing.py  run_scenarios.py  scenario_io.py  schemas.py  sim.py
test_scenarios/: default.json  scenario1.json
tests/: conftest.py  dynamics_test.py
vtvl-descent-control/: requirements.txt
vtvl-descent-control/notebooks/: attitude_loop.py  check_attitude.py  check_cascade.py
vtvl-descent-control/src/: controllers.py  dynamics.py  sim.py
vtvl-descent-control/tests/: attitude_test.py  attitude_test_plan.md  dynamics_test.py
