[project]
name = "vtvl-sim"
version = "0.1.0"
description = "Planar VTVL descent simulation with cascaded PD / LQR guidance"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "scipy==1.18.0",
    "matplotlib==3.11.0",
    "control==0.10.2",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtvl_sim"]
